# rpg-game

./: .gitignore  Cargo.toml  README.md
assets/map/: 64x64 Tileset Example Scene.psd  64x64 Tileset Layers.psd  firstmap.ldtk  startroom.ldtk
src/: cli.rs  constants.rs  goat.rs  main.rs  movement.rs  player.rs  plugins.rs  spawn.rs  states.rs  ui.rs  wall.rs
src/entities/: fignya.rs  friendly.rs  goat.rs  health.rs  level_params.rs  missile.rs  mod.rs  player.rs  spawn.rs  utils.rs  wall.rs
src/plugins/: attack.rs  cache.rs  development.rs  game.rs  movement.rs  visual.rs
src/resources/: cursor_position.rs  entry_point_destinations.rs  mod.rs  spawn_point.rs
src/systems/: animation.rs  attacking.rs  health.rs  mod.rs  spawn.rs
src/systems/actions/: attack.rs  mod.rs
src/systems/caching/: attack.rs  coords.rs  cursor.rs  entry.rs  friendly.rs  level_params.rs  mod.rs  movement.rs  visible_distanse.rs  wall.rs
