[package]
name = "rpg-game"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bevy = "0.14.1"
bevy_editor_pls = "0.9.0"
bevy_editor_pls_core = "0.9.0"
bevy_ecs_ldtk = { version = "0.10.0", features = ["bevy_ecs_ldtk_macros","atlas","derive"]}
bevy_render = "0.14.1"
bevy_ecs_tilemap = { version = "0.14.0", default-features = false, features = ["atlas", "render", "serde"]}
bevy_asset = { version = "0.14.1"}
bevy_ecs_ldtk_macros = "0.10.0"
glam = "0.29.0"
rand = "0.8.5"
serde_json = "1.0.122"
serde = "1.0.205"
bevy-inspector-egui = "0.25.1"
iyes_perf_ui = "0.3.0"
log = "0.4.21"
bevy_spritesheet_animation = "0.2.0"